# cardgameClasses

./: CMakeLists.txt  README.md  class-structure  class-structure.cpp
src/: card.h  class-structure.cpp  deck.cpp  deck.h  hand.cpp  hand.h  main.cpp
